# ChangeLog for app-emacs/planner
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/planner/ChangeLog,v 1.7 2006/11/28 04:09:02 mkennedy Exp $

*planner-3.41 (28 Nov 2006)

  28 Nov 2006; Matthew Kennedy <mkennedy@gentoo.org>
  files/80planner-gentoo.el, +planner-3.41.ebuild:
  New upstream version; Replace expensive site-lisp initialization with
  Planner's generated autoloads.

*planner-3.40 (22 Jan 2006)

  22 Jan 2006; <wrobel@gentoo.org> +planner-3.40.ebuild:
  Added new version 3.40

*planner-3.30 (20 Dec 2005)

  20 Dec 2005; Matthew Kennedy <mkennedy@gentoo.org> +planner-3.30.ebuild:
  New upstream version.

  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> planner-3.26.ebuild:
  Marked ~ppc.

  01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org> planner-3.26.ebuild:
  Keywording ~amd64.

  22 Jun 2005; Jason Wever <weeve@gentoo.org> planner-3.26.ebuild:
  Added ~sparc keyword.

*planner-3.26 (01 Feb 2005)

  01 Feb 2005; Matthew Kennedy <mkennedy@gentoo.org> +metadata.xml,
  +files/80planner-gentoo.el, +planner-3.26.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>
