@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/planner/planner-3.41.ebuild,v 1.1 2006/11/28 04:09:02 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/planner/planner-3.41.ebuild,v 1.2 2007/01/23 06:33:37 opfer Exp $
 
 inherit elisp
 
@@ -26,5 +26,5 @@ src_install() {
 	doinfo planner-el.info
 	dodoc COMMENTARY AUTHORS COPYING ChangeLog* NEWS README
 	elisp-install ${PN} *.{el,elc}
-	elisp-site-file-install ${FILESDIR}/${SITEFILE}
+	elisp-site-file-install "${FILESDIR}/${SITEFILE}"
 }
